Adaptado un test para la paginación en PartidaControllerTests